fix: 修改新增商品等
